fix 45 day support overflow on small screens

--- a/assets/css/less/media-queries.less
+++ b/assets/css/less/media-queries.less
@@ -1311,6 +1311,11 @@
 	.edd-gf-support-tickets-form .edd-gf-divider {
 		margin-top: 10px;
 	}
+	
+	/* support pricing */
+	.support-type-cta span {
+		display: none;
+	}
 
 	/* featuers */
 	.features-grid-content-sections .edd-feature h6 {
